# FreeJoyXConfigurator

./: .gitignore  ADVANCED_AXES_PLAN.md  ARCHITECTURE_BACKLOG.md  Cargo.toml  Port.md  README.md  RELEASE_NOTES.md  SESSION_LOG.md  UX_BACKLOG.md
.claude/commands/: resume.md
.github/workflows/: ci.yml  header-sync.yml  release-flash.yml
crates/freejoyx-app/: Cargo.toml
crates/freejoyx-app/src/: main.rs
crates/freejoyx-core/: Cargo.toml
crates/freejoyx-core/src/: lib.rs  persist.rs
crates/freejoyx-core/src/domain/: axes.rs  buttons.rs  encoders.rs  logic.rs  mod.rs  pins.rs  shift_registers.rs  validation.rs
crates/freejoyx-core/src/domain/modes/: axis_calibration.rs  axis_detect.rs  button_capture.rs  mod.rs
crates/freejoyx-core/src/wire/: config.rs  cursor.rs  display.rs  error.rs  firmware_version.rs  fragments.rs  mod.rs  params.rs
crates/freejoyx-core/tests/: codec_config.rs  codec_config_fragments.rs  codec_params.rs  persist_roundtrip.rs
crates/freejoyx-device/: Cargo.toml
crates/freejoyx-device/src/: error.rs  lib.rs  subscription.rs  transport.rs  worker.rs
crates/freejoyx-flash/src/: dfuse.rs  main.rs  proto.rs
crates/freejoyx-ui/: Cargo.toml  build.rs
crates/freejoyx-ui/assets/icons/: LICENSE.md
crates/freejoyx-ui/src/: advanced.rs  app.rs  buttons.rs  debug_log.rs  encoders.rs  lib.rs  log_dir.rs  settings.rs
crates/freejoyx-ui/src/tabs/: advanced.rs  buttons.rs  encoders.rs  mod.rs  pins.rs
crates/freejoyx-ui/ui/: app.slint  types.slint
crates/freejoyx-ui/ui/cells/: axis_bar.slint  back_jump_button.slint  calib_range_bar.slint  check_cell.slint  compact_button.slint  dropdown_cell.slint  dropdown_overlay.slint  header_cell.slint  icon_button.slint  live_dot.slint  lucide_icon.slint  number_cell.slint  pill_button.slint  pin_jump_button.slint  spin_cell.slint  status_dot.slint  tab_button.slint
crates/freejoyx-ui/ui/dialogs/: about_dialog.slint  device_picker.slint  toast_banner.slint  toolbar.slint
crates/freejoyx-ui/ui/globals/: btn_cols.slint  icons.slint  palette.slint  tooltip.slint
crates/freejoyx-ui/ui/rows/: axis_row_view.slint  button_row_view.slint  buttons_header_row.slint  pin_name_chip.slint  pin_row_strip.slint
crates/freejoyx-ui/ui/tabs/: advanced_tab.slint  axes_tab.slint  buttons_tab.slint  debug_tab.slint  encoders_tab.slint  pins_tab.slint  shift_regs_tab.slint  shifts_timers_tab.slint
docs/: ported-from.md  qt-capture-patch.diff
fixtures/: README.md  REGEN.md
packaging/: build-appimage.sh
