[package]
name = "freejoyx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire codec, domain types, validators, and on-disk serde for FreeJoyX configurations"

[dependencies]
serde = { workspace = true }
serde-big-array = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
